<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nourish Path</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kirim">Kirim</string>
    <string name="ketik_disini">Ketik disini</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="calendar">Calendar</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="start_your_day_with_some_motivation">Start your day with some motivation.</string>
    <string name="daily_vitamins">Prevent Stunting Early!</string>
    <string name="daily_vitamins_message">Hitung asupan nutrisi dari makanan yang dimakan!</string>
    <string name="daily_nutrition">Tanya Dr. Bot!</string>
    <string name="daily_nutrition_message">Ingin bertanya seputar kesehatan? Tanya Dr. Bot!</string>
    <string name="guides">Guides</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Your name</string>
    <string name="email">Email</string>
    <string name="account">Account</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatbot_init">What is stunting and how does it affect growth?</string>
    <string name="save">SAVE</string>
    <string name="berat_badan_anak">Berat badan anak (cm)</string>
    <string name="tinggi_badan_anak_cm">Tinggi badan anak (cm)</string>
    <string name="alamat_rumah">Address</string>
    <string name="nomor_telepon">Phone Number</string>
    <string-array name="data_question">
        <item>Bagaimana cara mengetahui apakah anak mengalami stunting?</item>
        <item>Apakah ada cara untuk mencegah stunting sejak dini?</item>
        <item>Bagaimana asupan gizi selama kehamilan dapat memengaruhi risiko stunting pada anak?</item>
        <item>Apa pentingnya asam folat selama kehamilan?</item>
        <item>Apa saja vaksin yang wajib diberikan pada bayi dan balita?</item>
        <item>Bagaimana cara merawat bayi baru lahir agar tetap sehat?</item>
        <item>Bagaimana cara mengatasi balita yang susah makan?</item>
    </string-array>
</resources>