<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="53dp"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile" />

            <Switch
                android:id="@+id/themeSwitch"
                android:layout_width="327dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:paddingStart="208dp"
                android:text="Dark Mode" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recommended_for_you"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/start_your_day_with_some_motivation"
            android:textColor="#757575"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="55dp"
            android:background="@drawable/rounded"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_today_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/calendar"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"/>

        <!-- Daily Vitamins dan Daily Nutrition -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fragmenthome1"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_vitamins"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_vitamins_message"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fragmenthome2"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_nutrition"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_nutrition_message"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>